Ejemplo Despliegue/ejemplo-bd-0.1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ejemplo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ejemplo-bd
  namespace: ejemplo  
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      tier: mysql
  template:
    metadata:
      labels:
        app: ejemplo
        tier: mysql 
    spec:
      imagePullSecrets:
        - name: registry-nexusimgrepo
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 3306 
          volumeMounts:             
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage             
            - mountPath: /dump
              name: volumen-mysql-dump
            - mountPath: /opt/scripts 
              name: mysql-opt-scripts-vol
          readinessProbe:
            exec:              
              command: ["/bin/bash", "/opt/scripts/check_mysql.sh"]
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3              
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: bd-data-pvc
        - name: volumen-mysql-dump
          persistentVolumeClaim:
            claimName: bd-dump-pvc
        - name: mysql-opt-scripts-vol
          configMap:
            name: mysql-opt-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: ejemplo-mysql-service
  namespace: ejemplo
spec:
  ports:
  - port: 3306    
  selector:
    app: ejemplo
    tier: mysql
  clusterIP: None
